feat(videos): create CRUD videos
